--- a/exhibitly/package.json
+++ b/exhibitly/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "react-native-popup-menu": "^0.16.1",
     "typescript": "^5.1.3"
   },
   "private": true
