Added Metro for web bundling

--- a/exhibitly/package.json
+++ b/exhibitly/package.json
@@ -9,15 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-web": "~0.19.10",
     "react-router-native": "^6.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native/metro-config": "^0.76.1",
     "@types/react": "~18.2.45",
     "react-native-popup-menu": "^0.16.1",
     "typescript": "^5.1.3"
